--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,16 +14,18 @@
 
     <!-- 中央控制器 -->
     <servlet>
-        <servlet-name>springmvc</servlet-name>
+        <servlet-name>SpringMVC</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-        <init-param>
+        <!-- 配置springMVC需要加载的配置文件 -->
+        <!--<init-param>
             <param-name>contextConfigLocation</param-name>
             <param-value>classpath:config/spring-dispatcher-servlet.xml</param-value>
-        </init-param>
+        </init-param>-->
         <load-on-startup>1</load-on-startup>
     </servlet>
+
     <servlet-mapping>
-        <servlet-name>springmvc</servlet-name>
+        <servlet-name>SpringMVC</servlet-name>
         <url-pattern>*.do</url-pattern>
     </servlet-mapping>
 
@@ -45,14 +47,24 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    <!-- 配置Spring的用于初始化容器对象的监听器 -->
-    <listener>
-        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener>
+    <!-- 阿里数据源 -->
+    <servlet>
+        <servlet-name>DruidStatView</servlet-name>
+        <servlet-class>com.alibaba.druid.support.http.StatViewServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>DruidStatView</servlet-name>
+        <url-pattern>/druid/*</url-pattern>
+    </servlet-mapping>
+    <!-- 阿里数据源 -->
+
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>classpath:config/spring-*.xml</param-value>
     </context-param>
 
-
+    <!-- 配置Spring的用于初始化容器对象的监听器 -->
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
 </web-app>
