--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,10 +17,10 @@
         <servlet-name>SpringMVC</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <!-- 配置springMVC需要加载的配置文件 -->
-        <!--<init-param>
+        <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>classpath:config/spring-dispatcher-servlet.xml</param-value>
-        </init-param>-->
+            <param-value>classpath:config/dispatcher-servlet.xml</param-value>
+        </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
 
