项目初始化

--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,8 @@
         <commons-fileupload.version>1.3.2</commons-fileupload.version>
 
         <freemarker.version>2.3.25-incubating</freemarker.version>
-        <!--<spring.shiro>1.3.0</spring.shiro>-->
+        <!--shiro 安全框架-->
+        <spring.shiro>1.3.0</spring.shiro>
     </properties>
 
     <dependencies>
@@ -244,29 +245,29 @@
             <version>${freemarker.version}</version>
         </dependency>
 
-        <!--<dependency>-->
-        <!--<groupId>org.apache.shiro</groupId>-->
-        <!--<artifactId>shiro-core</artifactId>-->
-        <!--<version>${spring.shiro}</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-core</artifactId>
+            <version>${spring.shiro}</version>
+        </dependency>
 
-        <!--<dependency>-->
-        <!--<groupId>org.apache.shiro</groupId>-->
-        <!--<artifactId>shiro-web</artifactId>-->
-        <!--<version>${spring.shiro}</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-web</artifactId>
+            <version>${spring.shiro}</version>
+        </dependency>
 
-        <!--<dependency>-->
-        <!--<groupId>org.apache.shiro</groupId>-->
-        <!--<artifactId>shiro-ehcache</artifactId>-->
-        <!--<version>${spring.shiro}</version>-->
-        <!--</dependency>-->
-        <!---->
-        <!--<dependency>-->
-        <!--<groupId>org.apache.shiro</groupId>-->
-        <!--<artifactId>shiro-spring</artifactId>-->
-        <!--<version>${spring.shiro}</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-ehcache</artifactId>
+            <version>${spring.shiro}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>${spring.shiro}</version>
+        </dependency>
 
         <dependency>
             <groupId>javax.servlet</groupId>
