--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 profile = prod_envrimont
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/xiaolove
+spring.datasource.url=jdbc:mysql://localhost:3306/xiaolove?characterEncoding=UTF-8&useUnicode=true&autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -8,6 +8,8 @@ spring.datasource.max-idle=10
 spring.datasource.max-wait=10000
 spring.datasource.min-idle=5
 spring.datasource.initial-size=5
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
 #logging.config=classpath:config/log4j2.xml
 #logging.path=log
