--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,12 @@
 profile = dev_envrimont
 
-spring.datasource.url=jdbc:mysql://localhost:3306/xiaolove?characterEncoding=UTF-8&useUnicode=true&autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/xiaolove?characterEncoding=UTF-8&useUnicode=true&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+
 spring.datasource.max-idle=10
 spring.datasource.max-wait=10000
 spring.datasource.min-idle=5
