--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
     <groupId>xiaolove</groupId>
     <artifactId>xiaolove</artifactId>
     <version>1.0.1</version>
+    <packaging>war</packaging>
 
     <name>xiaolove</name>
 
@@ -124,7 +125,7 @@
     </dependencies>
 
     <build>
-        <finalName>xiaolove</finalName>
+        <finalName>ROOT</finalName>
 
         <plugins>
             <plugin>
@@ -132,53 +133,22 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
 
-            <!--<plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
-            </plugin>-->
+            </plugin>
+
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-compiler-plugin</artifactId>-->
+                <!--<version>3.6.1</version>-->
+                <!--<configuration>-->
+                    <!--<source>1.8</source>-->
+                    <!--<target>1.8</target>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
         </plugins>
     </build>
-
-
-    <!--<plugins>-->
-    <!--<plugin>-->
-    <!--<groupId>org.apache.maven.plugins</groupId>-->
-    <!--<artifactId>maven-compiler-plugin</artifactId>-->
-    <!--<version>3.5.1</version>-->
-    <!--<configuration>-->
-    <!--<source>1.8</source>-->
-    <!--<target>1.8</target>-->
-    <!--</configuration>-->
-    <!--</plugin>-->
-    <!--</plugins>-->
-
-    <!--&lt;!&ndash;配置Maven 对resource文件 过滤 &ndash;&gt;-->
-    <!--<resources>-->
-    <!--<resource>-->
-    <!--<directory>src/main/resources</directory>-->
-    <!--<includes>-->
-    <!--<include>**/*.properties</include>-->
-    <!--<include>**/*.xml</include>-->
-    <!--</includes>-->
-    <!--<filtering>true</filtering>-->
-    <!--</resource>-->
-    <!--<resource>-->
-    <!--<directory>src/main/java</directory>-->
-    <!--<includes>-->
-    <!--<include>**/*.properties</include>-->
-    <!--<include>**/*.xml</include>-->
-    <!--</includes>-->
-    <!--<filtering>true</filtering>-->
-    <!--</resource>-->
-    <!--</resources>-->
-    <!--</build>-->
-
-    <!--<properties>-->
-    <!--&lt;!&ndash; 项目基础配置 &ndash;&gt;-->
-    <!--<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
-    <!--<project.build.locales>zh_CN</project.build.locales>-->
-
-    <!--</properties>-->
 
 
     <!--<dependency>-->
