--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
 
-        <!--<spring.shiro>1.3.0</spring.shiro>-->
+        <spring.shiro>1.4.0</spring.shiro>
     </properties>
 
 
@@ -122,6 +122,30 @@
             <version>1.11</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-core</artifactId>
+            <version>${spring.shiro}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-web</artifactId>
+            <version>${spring.shiro}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-ehcache</artifactId>
+            <version>${spring.shiro}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>${spring.shiro}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -151,29 +175,7 @@
     </build>
 
 
-    <!--<dependency>-->
-    <!--<groupId>org.apache.shiro</groupId>-->
-    <!--<artifactId>shiro-core</artifactId>-->
-    <!--<version>${spring.shiro}</version>-->
-    <!--</dependency>-->
 
-    <!--<dependency>-->
-    <!--<groupId>org.apache.shiro</groupId>-->
-    <!--<artifactId>shiro-web</artifactId>-->
-    <!--<version>${spring.shiro}</version>-->
-    <!--</dependency>-->
-
-    <!--<dependency>-->
-    <!--<groupId>org.apache.shiro</groupId>-->
-    <!--<artifactId>shiro-ehcache</artifactId>-->
-    <!--<version>${spring.shiro}</version>-->
-    <!--</dependency>-->
-
-    <!--<dependency>-->
-    <!--<groupId>org.apache.shiro</groupId>-->
-    <!--<artifactId>shiro-spring</artifactId>-->
-    <!--<version>${spring.shiro}</version>-->
-    <!--</dependency>-->
 
 
     <!--&lt;!&ndash; https://mvnrepository.com/artifact/com.sun.xml.ws/jaxws-rt &ndash;&gt;-->
