--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,13 @@
             <version>${spring.shiro}</version>
         </dependency>
 
+
+        <!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.9</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -163,19 +170,16 @@
             </plugin>
 
             <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-compiler-plugin</artifactId>-->
-                <!--<version>3.6.1</version>-->
-                <!--<configuration>-->
-                    <!--<source>1.8</source>-->
-                    <!--<target>1.8</target>-->
-                <!--</configuration>-->
+            <!--<groupId>org.apache.maven.plugins</groupId>-->
+            <!--<artifactId>maven-compiler-plugin</artifactId>-->
+            <!--<version>3.6.1</version>-->
+            <!--<configuration>-->
+            <!--<source>1.8</source>-->
+            <!--<target>1.8</target>-->
+            <!--</configuration>-->
             <!--</plugin>-->
         </plugins>
     </build>
-
-
-
 
 
     <!--&lt;!&ndash; https://mvnrepository.com/artifact/com.sun.xml.ws/jaxws-rt &ndash;&gt;-->
@@ -185,13 +189,5 @@
     <!--<version>2.2.10</version>-->
     <!--</dependency>-->
 
-    <!--&lt;!&ndash; https://mvnrepository.com/artifact/com.alibaba/druid &ndash;&gt;-->
-    <!--<dependency>-->
-    <!--<groupId>com.alibaba</groupId>-->
-    <!--<artifactId>druid</artifactId>-->
-    <!--<version>1.1.9</version>-->
-    <!--</dependency>-->
-
-    <!--</dependencies>-->
 
 </project>
