--- a/src/main/resources/email.properties
+++ b/src/main/resources/email.properties
@@ -1,9 +1,9 @@
-mail.smtp.auth= true
-mail.transport.protocol= smtp
-mail.send.charset= UTF-8
-mail.smtp.port= 25
-mail.is.ssl= true
-mail.host= smtpdm.aliyun.com
-mail.auth.name= likang@mail.xxkxxy.com
-mail.auth.password= LiKang123
-mail.smtp.timeout= 5000
+mail.smtp.auth=true
+mail.transport.protocol=smtp
+mail.send.charset=UTF-8
+mail.smtp.port=25
+mail.is.ssl=false
+mail.host=smtpdm.aliyun.com
+mail.auth.name=likang@mail.xxkxxy.com
+mail.auth.password=LiKang1234
+mail.smtp.timeout=5000
